parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__bytes-literals-1.snap
---
source: parser/src/lexer/mod.rs
description: "b\"world\""
---
[
    Token {
        kind: Bytes,
        value: Str(
            "b\"world\"",
        ),
        start: 0,
        end: 8,
    },
]
