parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__bytes-literals-2.snap
---
source: parser/src/lexer/lexer.rs
description: "b\"\""
---
[
    Token {
        kind: Bytes,
        value: Str(
            "b\"\"",
        ),
        start: 0,
        end: 3,
    },
]
