parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__bytes-literals-3.snap
---
source: parser/src/lexer/mod.rs
description: "a = b\"hello\""
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Assign,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: Bytes,
        value: Str(
            "b\"hello\"",
        ),
        start: 4,
        end: 12,
    },
]
