parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__bytes-literals-5.snap
---
source: parser/src/lexer/mod.rs
description: "b\"\"\"hello\"\"\""
---
[
    Token {
        kind: Bytes,
        value: Str(
            "b\"\"\"hello\"\"\"",
        ),
        start: 0,
        end: 12,
    },
]
