parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__ellipsis-0.snap
---
source: parser/src/lexer/mod.rs
description: "..."
---
[
    Token {
        kind: Ellipsis,
        value: None,
        start: 0,
        end: 3,
    },
]
