parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__f-string-literals-1.snap
---
source: parser/src/lexer/lexer.rs
description: "f'hello_{var}'"
---
[
    Token {
        kind: FStringStart,
        value: Str(
            "f'",
        ),
        start: 0,
        end: 2,
    },
    Token {
        kind: FStringMiddle,
        value: Str(
            "hello_",
        ),
        start: 2,
        end: 8,
    },
    Token {
        kind: LeftBracket,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Identifier,
        value: Str(
            "var",
        ),
        start: 9,
        end: 12,
    },
    Token {
        kind: RightBracket,
        value: None,
        start: 12,
        end: 13,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "'",
        ),
        start: 13,
        end: 14,
    },
]
