parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__f-string-literals-2.snap
---
source: parser/src/lexer/mod.rs
description: "f\"world\""
---
[
    Token {
        kind: FStringStart,
        value: Str(
            "f\"",
        ),
        start: 0,
        end: 2,
    },
    Token {
        kind: FStringMiddle,
        value: Str(
            "world",
        ),
        start: 2,
        end: 7,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "\"",
        ),
        start: 7,
        end: 8,
    },
]
